[package]
name = "tscaurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Updated 3/14/22
[dependencies]
tokio = { version = "1.17.0", features = ["full"] } # for our async runtime
reqwest = { version = "0.11.9", features = ["json"] } # reqwest with JSON parsing support
serde = { version = "1.0.136", features = ["derive"] }
